Fixed gap in navbar

--- a/frontend/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/frontend/src/widgets/Navbar/ui/Navbar.module.scss
@@ -26,6 +26,6 @@
 .navbarRight {
     display: flex;
     align-items: center;
-    gap: 120px;
+    gap: 10px;
     margin-right: 60px;
 }
